--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,47 @@
 {
     "latex-workshop.latex.autoBuild.run": "never",
+    "latex-workshop.latex.tools": [
+        {
+            "name": "latexmk",
+            "command": "latexmk",
+            "args": [
+                "-synctex=1",
+                "-interaction=nonstopmode",
+                "-file-line-error",
+                "-pdf",
+                "-outdir=%OUTDIR%",
+                "%DOC%"
+            ],
+            "env": {}
+        },
+        {
+            "name": "lualatexmk",
+            "command": "latexmk",
+            "args": [
+                "-synctex=1",
+                "-interaction=nonstopmode",
+                "-file-line-error",
+                "-lualatex",
+                "-outdir=%OUTDIR%",
+                "%DOC%"
+            ],
+            "env": {}
+        },
+        {
+            "name": "pythontex",
+            "command": "pythontex",
+            "args": [
+                "%DOC%.tex"
+            ],
+            "env": {}
+        }
+    ],
     "latex-workshop.latex.recipes": [
         {
             "name": "latexmk (lualatex)",
             "tools": [
+                "lualatexmk",
+                "pythontex",
                 "lualatexmk"
             ]
         },
@@ -13,5 +51,8 @@
                 "latexmk"
             ]
         },
+    ],
+    "cSpell.words": [
+        "xbar"
     ],
 }
