--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,7 +34,9 @@
         },
     ],
     "cSpell.words": [
+        "directlua",
         "jobspecific",
+        "luadirect",
         "lualatex",
         "nonstopmode",
         "pathlib",
