Improve the description

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,14 +34,21 @@
         },
     ],
     "cSpell.words": [
+        "chktex",
+        "chktexrc",
         "directlua",
+        "isort",
         "jobspecific",
+        "latexindent",
         "luadirect",
         "lualatex",
         "nonstopmode",
+        "Numpy",
         "pathlib",
         "preprocess",
+        "pylint",
         "pythontex",
+        "Scipy",
         "xbar"
     ],
 }
